--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
     <audio id="bg-music" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-10.mp3" type="audio/mpeg">
+        <source src="song.mp3.mp3" type="audio/mpeg">
     </audio>
 
     <script>
@@ -432,4 +432,5 @@
         }, 3000); 
     </script>
 </body>
+
 </html>
